# abstract-in-context

./: README.md  abstract-in-context.cabal  default.nix
app/: Main.hs
nix/: sources.json
src/: AbstractInContext.hs  Applicative.hs
test/: Main.hs
