name:                abstract-in-context
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/your_github_username/abstract-in-context
license:             BSD3
author:              Your Name
maintainer:          Your Name
copyright:           Your Name
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     AbstractInContext, Applicative
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , optparse-applicative

executable abstract-in-context
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , abstract-in-context

test-suite abstract-in-context-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , abstract-in-context
                  , hedgehog
